# Documind

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: config.py  main.py  worker.py
app/core/: auth.py  exceptions.py  host_access.py  notifications.py  queue.py
app/db/: database.py  models.py
app/routers/: documents.py  history.py  search.py  settings.py  uploads.py
app/schemas/: documents.py  history.py  search.py  settings.py  uploads.py
app/services/: agents.py  app_settings.py  chunking.py  document_ingestion.py  embeddings.py  pdf_parser.py  storage.py  summarizer.py
docs/: API.md  BULK_IMPORT.md  Launch-Intelligence.postman_collection.json
frontend/: Dockerfile  index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  format.ts  main.tsx  styles.css  types.ts
frontend/src/components/: Login.tsx
frontend/src/pages/: DocumentDetailPage.tsx  DocumentsPage.tsx  HistoryPage.tsx  SearchPage.tsx  SettingsPage.tsx
scripts/: bulk_import.py  create_api_key.py  export_backup.sh  import_backup.sh
sql/: 2026-07-09_add_document_status.sql  2026-07-10_agents_uploads_history.sql  2026-07-12_summary_generated.sql  init_database.sql
tests/: conftest.py  test_agents.py  test_auth.py  test_chunking.py  test_embeddings.py  test_host_access.py  test_notifications.py  test_pdf_parser.py  test_schemas.py  test_storage.py
