[project]
name = "documind"
version = "0.1.0"
description = "Document recommendation microservice with embeddings stored in PostgreSQL (pgvector)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "pypdf>=5.1",
    "openai>=1.55",
    "httpx>=0.27",
    "aiofiles>=24.1",
    "arq>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
